# DSLA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dsla/: __init__.py  server.py
dsla/adapters/: __init__.py  base.py  legal_doc.py  trading_ops.py
dsla/memory/: __init__.py  structured_memory.py
dsla/rag/: __init__.py  rag_module.py
dsla/router/: __init__.py  router.py
examples/: integration_test.py  legal_doc_example.py  trading_ops_example.py
tests/: test_adapters.py  test_memory.py  test_rag.py  test_router.py  test_server.py
